2007-06-28  Vitaly Alexeev <tishka92@yahoo.com>

	Fixed _width & _height property of characters. For calculation of the width & height is used
	the bound that covers this character. 
	* gameswf/gameswf.h
	* gameswf/gameswf_button.cpp
	* gameswf/gameswf_character.cpp
	* gameswf/gameswf_character.h
	* gameswf/gameswf_impl.cpp
	* gameswf/gameswf_impl.h
	* gameswf/gameswf_morph2.cpp
	* gameswf/gameswf_shape.cpp
	* gameswf/gameswf_shape.h
	* gameswf/gameswf_sprite.cpp
	* gameswf/gameswf_sprite.h
	* gameswf/gameswf_text.cpp
	* gameswf/gameswf_text.h
	* gameswf/gameswf_types.cpp

2007-06-23  Thatcher Ulrich <tu@tulrich.com>
	* base/tu_random.*: fixed determinism, added comments for
	4096-seed version of CMWC

2007-06-21  Vitaly Alexeev <tishka92@yahoo.com>

	smart_ptr() ==> tweak_ptr() in listeners.
	3DS plugin implementation moved from x3ds_definition to x3ds_instance
	(I plan to use moviclip as texture for 3D model).
	Implemented leftMargin, rightMargin, indent & leading properties of TextFormat Action Script class
	* base/smart_ptr.h
	* gameswf/gameswf_as_classes/as_key.h
	* gameswf/gameswf_as_classes/as_mcloader.cpp
	* gameswf/gameswf_as_classes/as_mcloader.h
	* gameswf/gameswf_impl.cpp
	* gameswf/gameswf_root.cpp
	* gameswf/gameswf_root.h
	* gameswf/gameswf_text.cpp
	* gameswf/gameswf_text.h
	* gameswf/plugins/lib3ds/gameswf_3ds.cpp
	* gameswf/plugins/lib3ds/gameswf_3ds.h

2007-06-19  Vitaly Alexeev <tishka92@yahoo.com>

	Implemented font, bold, italic, size, align & color properties of
	TextFormat Action Script class
	* gameswf/gameswf.h
	* gameswf/gameswf_action.cpp
	* gameswf/gameswf_as_classes/as_textformat.cpp: rewritten
	* gameswf/gameswf_as_classes/as_textformat.h: rewritten
	* gameswf/gameswf_font.h
	* gameswf/gameswf_text.cpp
	* gameswf/gameswf_text.h

2007-06-17  Vitaly Alexeev <tishka92@yahoo.com>

	Fixed _framesloaded property
	* gameswf/gameswf_as_classes/as_mcloader.cpp
	* gameswf/gameswf_character.cpp
	* gameswf/gameswf_character.h